--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,15 @@
 // Specific CSS for your home-page
+.img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+// style le simple form for
+.searche-bar {
+  display: flex;
+  justify-content: center;
+  background-color: aliceblue;
+  margin-top: 20px;
+}
