changement car type et couleur home.css

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -103,7 +103,7 @@
 
 .navbar .menu-items {
   padding-top: 120px;
-  background-color: grey;
+  background-color: #ffffff91;
   height: 100vh;
   width: 100%;
   transform: translate(-150%);
