--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,4 @@
 .footer {
-  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
@@ -11,4 +10,5 @@
   justify-content: center;
   align-items: center;
   gap: 0.2rem;
+  margin-top: 0px;
 }
