--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,15 +1,72 @@
 // Specific CSS for your home-page
-.img {
+
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+}
+
+.container-home {
+  height: 100%;
   width: 100%;
-  height: 300px;
-  object-fit: cover;
-  border-radius: 5px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('Designer.jpeg') no-repeat center center;
+  background-size: cover;
+  z-index: -1;
+}
+
+.home-title h1 {
+  font-size: 4rem;
+  margin-bottom: 1rem;
+  margin-top: 5%;
 }
 
 // style le simple form for
-.searche-bar {
-  display: flex;
-  justify-content: center;
-  background-color: aliceblue;
-  margin-top: 20px;
+.car-search-form {
+  background-color: rgba(255, 255, 255, 0.702);
+  max-width: 500px;
+  margin: 2rem auto;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.car-search-form .form-group {
+  margin-bottom: 1rem;
+}
+
+.car-search-form select {
+  width: 100%;
+  padding: 0.5rem;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.car-search-form .btn {
+  width: 100%;
+  padding: 0.75rem;
+  background-color: #222222;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.car-search-form .btn:hover {
+  background-color: #606060;
 }
