--- a/app/views/rents/index.html.erb
+++ b/app/views/rents/index.html.erb
@@ -10,9 +10,10 @@
           <p>Date: <%= rent.date %></p>
           <p>Statut: <%= rent.status ? "Accepté" : "En attente" %></p>
           <p>Paiement: <%= rent.payment ? "Effectué" : "En attente" %></p>
-          <% link_to "Supprimer", rent_path(rent),
-          data: { turbo_method: :delete, turbo_confirm: "Êtes-vous sûr ?" }
-          class: "btn btn-danger" %>
+         <%= link_to "Supprimer", rent_path(rent),
+            data: { turbo_method: :delete, turbo_confirm: "Êtes-vous sûr ?" },
+            class: "btn btn-danger" %>
+
 
           <% if current_user == rent.car.user %>
             <%= simple_form_for [rent.car, rent] do |f| %>
