show finis et emplacement mapbox

--- a/app/assets/stylesheets/cars/search.scss
+++ b/app/assets/stylesheets/cars/search.scss
@@ -6,7 +6,7 @@ body {
   height: 100%;
 }
 
-.container-cars-index {
+.container-cars-search_index {
   margin: 0 auto;
   padding: 0 1rem;
   text-align: center;
@@ -19,7 +19,7 @@ body {
   }
 }
 
-.background-cars-index {
+.background-cars-search_index {
   position: absolute;
   top: 0;
   left: 0;
