--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -18,6 +18,7 @@
 
 .navbar {
   width: 100%;
+  background-color: #f2f1f1;
   // box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
 }
 
@@ -104,7 +105,7 @@
 
 .navbar .menu-items {
   padding-top: 120px;
-  background-color: #ffffff91;
+  background-color: #f3f3f3f2;
   height: 100vh;
   width: 100%;
   transform: translate(-150%);
