--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -25,6 +25,7 @@ body {
   width: 100%;
   height: 100%;
   background: url('Designer.jpeg') no-repeat center center;
+  // background-color: rgb(224, 224, 224);
   background-size: cover;
   z-index: -1;
 }
