--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -36,5 +36,21 @@
     <%= f.text_field :motorization, class: "form-control" %>
   </div>
 
+  <div class="form-group">
+  <%= f.label :start_date, "Date de début" %>
+  <%= f.datetime_local_field :start_date,
+                    as: :datetime,
+                   class: "form-control",
+                   data: { controller: "datepicker", datepicker_target: "start" } %>
+</div>
+
+<div class="form-group">
+  <%= f.label :end_date, "Date de fin" %>
+  <%= f.datetime_local_field :end_date,
+                   class: "form-control",
+                   data: { controller: "datepicker", datepicker_target: "end" } %>
+</div>
+
+
   <%= f.submit "Créer la voiture", class: "btn btn-primary" %>
 <% end %>
