--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -10,8 +10,8 @@
       <p class="car-type"><strong>Type:</strong> <%= @car.car_type %></p>
       <p class="car-motorization"><strong>Motorisation:</strong> <%= @car.motorization %></p>
       <p class="car-description"><%= @car.detail %></p>
-      <p class="car-dispo"><%= car.start_date.strftime("%d/%m/%Y %H/%M") %></p>
-      <p class="car-retour"><%= car.end_date.strftime("%d/%m/%Y %H/%M") %></p>
+      <p class="car-dispo"><%= @car.start_date.strftime("%d/%m/%Y %H:%M") %></p>
+      <p class="car-retour"><%= @car.end_date.strftime("%d/%m/%Y %H:%M") %></p>
       <button>resever</button>
       <%# <%= link_to 'Réserver', new_reservation_path(car_id: @car.id), class: "btn-reserve" %>
       </div>
