--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -6,4 +6,12 @@
   <p><strong>Type:</strong> <%= @car.car_type %></p>
   <p><strong>Motorisation:</strong> <%= @car.motorization %></p>
   <p><strong>Détails:</strong> <%= @car.detail %></p>
+  <p><strong>Adresse:</strong> <%= @car.address %></p>
+</div>
+
+<div style="width: 100%; height: 400px;"
+      data-controller="map"
+      data-map-lng-value="<%= @markers[1] %>"
+      data-map-lat-value="<%= @markers[0] %>"
+      data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
 </div>
