--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -15,7 +15,7 @@
           <li><<%= link_to "Home", root_path %></li>
               <% if user_signed_in? %>
                 <li><%= link_to "List of cars", cars_path %></li>
-                <li><%= link_to "Mettre en location", new_rents_path %></li>
+                <%# <li><%= link_to "Mettre en location", new_rents_path %></li> %>
                 <li><%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %></li>
               <% else %>
                 <!--li class="nav-item"-->
