--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -37,6 +37,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :address, "Adress" %>
+    <%= f.text_field :address, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
   <%= f.label :start_date, "Date de début" %>
   <%= f.datetime_local_field :start_date,
                     as: :datetime,
