--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "config/fonts";
 @import "config/colors";
 @import "config/bootstrap_variables";
+@import "config/variables";
 
 // External libraries
 @import "bootstrap";
@@ -12,3 +13,4 @@
 @import "components/index";
 @import "pages/index";
 @import "cars/cars-index";
+@import "devise/index";
