--- a/app/views/pages/payment.html.erb
+++ b/app/views/pages/payment.html.erb
@@ -4,17 +4,16 @@
   <h2>Voiture : <%= @car.name %></h2>
   <p><strong>Marque :</strong> <%= @car.brand %></p>
 <p><strong>Prix :</strong> <%= number_to_currency(@car.price, unit: "€") %></p>
-  <p><strong>Type :</strong> <%= @car.car_type %></p>
+  <p><strong>Type de voiture :</strong> <%= @car.car_type %></p>
   <p><strong>Motorisation :</strong> <%= @car.motorization %></p>
   <p><strong>Date de début :</strong> <%= @car.start_date.present? ? @car.start_date.strftime("%d/%m/%Y %H:%M") : "Non spécifiée" %></p>
   <p><strong>Date de fin :</strong> <%= @car.end_date.present? ? @car.end_date.strftime("%d/%m/%Y %H:%M") : "Non spécifiée" %></p>
    <% if @car.rents.any? %>
-  <p><strong>Payment :</strong> <%= @car.rents.last.payment ? "Effectué" : "Non effectué" %></p>
+  <p><strong>Payment :</strong> <%= @car.rents.find_by(user_id: current_user.id).payment ? "Effectué" : "Non effectué" %></p>
 <% else %>
 
 <% end %>
-
    <div class="actions">
-  <%= button_to 'Valider le paiement', validate_payment_car_path(@car), method: :patch, class: "btn btn-success" %>
+  <%= link_to 'Valider le paiement', validate_payment_rent_path(@rent), class: "btn btn-success" %>
 </div>
 </div>
