--- a/app/views/pages/profil.html.erb
+++ b/app/views/pages/profil.html.erb
@@ -18,21 +18,24 @@
     </thead>
     <tbody>
       <%# cars current user %>
-      <% @car.each do |rent| %>
-        <tr>
-          <td>
-            <%= link_to car_path(rent) do %>
-              <%= rent.brand %> <%= rent.name %>
-            <% end %>
-          </td>
-          <td><%= rent.start_date.strftime("%d/%m/%Y %H:%M") %></td>
-          <td><%= rent.end_date.strftime("%d/%m/%Y %H:%M") %></td>
-          <td><%= number_to_currency(rent.price, unit: "€", separator: ",", delimiter: " ") %></td>
-          <% @rents.each do |rent| %>
-            <td><%= rent.payment ? "Payé" : "En ligne" %></td>
-          </tr>
-        <% end %>
+      <% @rents.each do |rent| %>
+  <tr>
+    <td>
+      <%= link_to car_path(rent.car) do %>
+        <%= rent.car.brand %> <%= rent.car.name %>
       <% end %>
-    </tbody>
+    </td>
+    <td><%= rent.car.start_date.strftime("%d/%m/%Y %H:%M") if rent.car.start_date.present? %></td>
+    <td><%= rent.car.end_date.strftime("%d/%m/%Y %H:%M") if rent.car.end_date.present? %></td>
+    <td><%= number_to_currency(rent.price, unit: "€", separator: ",", delimiter: " ") %></td>
+    <td>
+      <% if rent.payment %>
+        Payé
+      <% else %>
+        En ligne
+      <% end %>
+    </td>
+  </tr>
+<% end %>
   </table>
 </div>
