--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -11,7 +11,11 @@
       <p class="car-description"><%= @car.detail %></p>
       <p class="car-dispo"><%= @car.start_date.strftime("%d/%m/%Y %H:%M") %></p>
       <p class="car-retour"><%= @car.end_date.strftime("%d/%m/%Y %H:%M") %></p>
+      <% if user_signed_in? %>
       <%= link_to 'Réserver', payment_path(car_id: @car.id), class: "btn btn-primary" %>
+      <% else %>
+      <%= link_to 'Réserver', new_user_session_path, class: "btn btn-primary" %>
+      <% end %>
       </div>
       <div class="car-mapbox"
         style="width: 100%; height: 400px;"
